[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndl-cache"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "aioduckdb>=0.1.0",  # brings duckdb transitively
    "aiohttp>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["ndl_cache"]
